# langchain

libs/langchain/langchain_classic/retrievers/: __init__.py  hybrid.py
libs/langchain/tests/unit_tests/retrievers/: test_hybrid.py
qa_rag_system/: .dockerignore  .gitignore  AB_TESTING.md  DEPLOYMENT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  app.py  docker-compose.yml  env.example  example.py  pyproject.toml
qa_rag_system/examples/: ab_testing_example.py
qa_rag_system/src/qa_rag_system/: __init__.py  ab_testing.py  app.py  config.py  cost_callback.py  cost_tracker.py  document_loader.py  embeddings.py  feedback_analyzer.py  feedback_store.py  llm.py  rag_chain.py  vector_store.py
qa_rag_system/tests/: __init__.py  test_ab_testing.py  test_config.py  test_rag_chain_comparison.py
